--- a/src/components/payment/RentingButton.scss
+++ b/src/components/payment/RentingButton.scss
@@ -1,10 +1,10 @@
 @import "../scss/config";
 
-.rentNowBtnCont {
-  width: 100%;
-  margin: auto;
-  .rentNowBtn {
-    width: 100%;
-    margin: auto;
-  }
-}
+// .rentNowBtnCont {
+//   width: 100%;
+//   margin: auto;
+//   .rentNowBtn {
+//     width: 100%;
+//     margin: auto;
+//   }
+// }
