--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -4,6 +4,7 @@
   #contactContainer {
     background-color: $page-background-color;
     width: 100%;
+
     #contact {
       display: flex;
       justify-content: space-between;
@@ -11,15 +12,18 @@
       width: 75%;
       margin: auto;
       padding-top: 50px;
+
       #contact_text {
         display: flex;
         flex-direction: column;
         width: 50%;
       }
+
       .form {
         display: flex;
         flex-direction: column;
         width: 45%;
+
         form {
           display: flex;
           flex-direction: column;
@@ -27,6 +31,7 @@
           // gap: 20px;
           margin: 0;
           width: auto;
+
           > div {
             display: flex;
             gap: 10px;
@@ -40,10 +45,11 @@
               margin: 0;
             }
           }
+
           .input {
             margin-bottom: 20px;
             background-color: #1a1a1b;
-            margin: 20px 0px 20px;
+            margin: 20px 0 20px;
             width: auto;
             transition: transform 0.5s ease-in-out;
 
@@ -65,6 +71,7 @@
               transform: scale(1.04);
             }
           }
+
           button {
             // width: 60%;
           }
@@ -72,15 +79,18 @@
       }
     }
   }
+
   #contactCardContainer {
     width: 75%;
     margin: auto;
+
     #contactCardContent {
       display: flex;
       justify-content: space-between;
       align-items: center;
       align-content: center;
       padding-top: 150px;
+
       .contactCard {
         display: flex;
         flex-direction: column;
@@ -90,18 +100,20 @@
         padding: 20px;
         width: 29%;
         height: 25vh;
-        color: #ffffff;
-        border: 1px solid #ffffff;
+        color: #fff;
+        border: 1px solid #fff;
         text-align: left;
         transition: transform 0.5s ease-in-out;
 
         &:hover {
           transform: scale(1.04);
         }
+
         h3 {
           font-size: 2em;
           margin-bottom: 20px;
         }
+
         p {
           font-size: 1.5em;
         }
@@ -114,16 +126,19 @@
         }
       }
     }
+
     .icon_label {
       margin-right: 20px;
       font-size: 1em;
     }
   }
+
   .map_container {
     height: 400px; // Adjust the height as needed
     margin-top: 200px;
   }
 }
+
 @media only screen and (max-width: 768px) {
   #contactContainer {
     background-color: $page-background-color;
@@ -137,15 +152,18 @@
       // align-items: center;
       text-align: center;
       margin: 10px;
+
       #contact_text {
         display: flex;
         flex-direction: column;
         align-items: center;
       }
+
       .form {
         display: flex;
         flex-direction: column;
         width: 100%;
+
         form {
           display: flex;
           flex-direction: column;
@@ -153,6 +171,7 @@
           // gap: 20px;
           margin: 0;
           width: auto;
+
           > div {
             display: flex;
             flex-direction: column;
@@ -160,10 +179,11 @@
             width: 100%;
             margin: 0 auto;
           }
+
           .input {
             margin-bottom: 20px;
             background-color: #1a1a1b;
-            margin: 10px 0px 10px;
+            margin: 10px 0 10px;
             width: auto;
           }
 
@@ -174,8 +194,9 @@
             width: 100%;
             background-color: #1a1a1b;
             width: auto;
-            margin: 10px 0px 10px;
+            margin: 10px 0 10px;
           }
+
           button {
             width: 60%;
             margin: 20px auto;
@@ -184,10 +205,12 @@
       }
     }
   }
+
   #contactCardContainer {
     display: flex;
     flex-direction: column;
     margin: 20px;
+
     #contactCardContent {
       display: flex;
       flex-direction: column;
@@ -206,8 +229,8 @@
         padding: 20px;
         width: 100%;
         height: 20vh;
-        color: #ffffff;
-        border: 1px solid #ffffff;
+        color: #fff;
+        border: 1px solid #fff;
         text-align: center;
         // background-color: green;
 
@@ -215,6 +238,7 @@
           font-size: 2em;
           margin-bottom: 20px;
         }
+
         p {
           font-size: 1.5em;
         }
@@ -227,16 +251,19 @@
         }
       }
     }
+
     .icon_label {
       margin-right: 20px;
       font-size: 1em;
     }
   }
+
   .map_container {
     height: 400px; // Adjust the height as needed
     margin-top: 200px;
     width: 100%;
   }
+
   .map_container {
     height: 400px; // Adjust the height as needed
     margin-top: 200px;
