--- a/src/components/footer body/footer_body.scss
+++ b/src/components/footer body/footer_body.scss
@@ -22,53 +22,63 @@
         margin: auto;
         padding-top: 150px;
         padding-bottom: 30px;
+
         #company_info {
           img {
             width: 200px;
             margin-bottom: 20px;
           }
+
           .footer1_item {
             width: 30%;
             // background-color: red;
             ul {
               margin: 0;
+
               li {
                 list-style-type: none;
                 position: relative; /* Set position to relative for pseudo-element */
                 padding-left: 0; /* Add padding for arrow */
                 margin-bottom: 3px; /* Add margin between list items */
 
-                &:before {
+                &::before {
                   content: "\2192"; /* Unicode arrow character (→) */
                   position: absolute;
                   left: -35px;
                 }
               }
             }
+
             ~ div {
-              padding: 0px 10px 0px 10px;
+              padding: 0 10px 0 10px;
+
               > div {
                 gap: 10px;
+
                 span {
                   margin-left: 10px;
                 }
+
                 margin-bottom: 15px;
               }
             }
           }
         }
       }
+
       #copyright {
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
         width: 75%;
         margin: auto;
-        border-top: 1px solid #ffffff;
-        padding: 30px 0px 30px;
+        border-top: 1px solid #fff;
+        padding: 30px 0 30px;
+
         p {
           margin: 0;
         }
+
         > div {
           display: flex;
           justify-content: center;
@@ -77,6 +87,7 @@
         }
       }
     }
+
     .footer1_item {
       width: 33%;
     }
@@ -91,6 +102,7 @@
     // height: 99vh;
     background-color: #230b0b;
     margin-top: 50px;
+
     .footer_body_content {
       display: flex;
       flex-direction: column;
@@ -106,8 +118,10 @@
         padding-top: 0;
         margin-bottom: 30px;
         padding: 10px;
+
         .footer1_item {
           width: 90%;
+
           img {
             width: 200px;
             margin-bottom: 20px;
@@ -115,13 +129,14 @@
 
           ul {
             margin: 0;
+
             li {
               list-style-type: none;
               position: relative; /* Set position to relative for pseudo-element */
               padding-left: 0; /* Add padding for arrow */
               margin-bottom: 3px; /* Add margin between list items */
 
-              &:before {
+              &::before {
                 content: "\2192"; /* Unicode arrow character (→) */
                 position: absolute;
                 left: -35px;
@@ -129,6 +144,7 @@
             }
           }
         }
+
         #footer1_contact {
           // display: flex;
           // flex-direction: column;
@@ -139,6 +155,7 @@
               color: yellow;
               margin: 0;
               padding: 0;
+
               span {
                 margin-left: 10px;
               }
@@ -147,14 +164,16 @@
         }
       }
     }
+
     #copyright {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       width: 100%;
-      border-top: 1px solid #ffffff;
+      border-top: 1px solid #fff;
       padding: 30px;
+
       p {
         font-size: 1em;
       }
