--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -3,36 +3,44 @@
 @media only screen and (min-width: 768px) {
   #hire_us_container {
     height: 50vh;
+
     #hire_us {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-content: center;
+
       > div {
         display: flex;
         flex-direction: column;
         margin: auto;
         align-items: flex-start;
         text-align: left;
-        width:75%;
+        width: 75%;
         // z-index: 5000;
         color: white;
         animation: fadeInSlideUp 1s ease-in-out;
-        h5, p, h2 {
+
+        h5,
+        p,
+        h2 {
           width: 70%;
         }
       }
     }
   }
 }
+
 @media only screen and (max-width: 768px) {
   #hire_us_container {
     width: 100%;
+
     #hire_us {
       padding: 10px;
       max-width: 100%;
       display: flex;
       flex-direction: column;
+
       #hire_us_text {
         // display: flex;
         // flex-direction: column;
