--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -30,8 +30,10 @@
       //   margin-top: 0;
       // }
     }
+
     form {
       width: 45%;
+
       input {
         // width: 60%;
         // //   height: 4vh;
@@ -39,10 +41,11 @@
         // border: 1px solid gold;
         // background-color: transparent;
       }
+
       button {
         width: 30%;
-        border: 0px solid gold;
-        border-radius: 0px;
+        border: 0 solid gold;
+        border-radius: 0;
         // width: 160px;
         // padding: 12px;
         background-color: rgb(190, 166, 27);
@@ -79,20 +82,23 @@
       // padding: 20px;
       // background-color: green;
     }
+
     form {
       display: flex;
       flex-direction: column;
       // justify-content: center;
       align-items: center;
       width: 100%;
+
       input {
         // width: 100%;
         // height: 4vh;
       }
+
       button {
         // width: 90%;
-        border: 0px solid gold;
-        border-radius: 0px;
+        border: 0 solid gold;
+        border-radius: 0;
         margin-top: 10px;
         // width: 160px;
         // padding: 12px;
