--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -6,6 +6,7 @@
     gap: 60px;
     width: 75%;
     margin: auto;
+
     #why_choose_us_text {
       width: 40%;
       text-align: left;
@@ -15,10 +16,12 @@
         margin: 0;
         font-size: 1.5em;
         color: rgb(250, 185, 7);
+
         span {
           color: white;
           margin-right: 10px;
         }
+
         animation: slideInFromLeft 1s ease-in-out;
       }
 
@@ -37,11 +40,13 @@
         animation: slideInFromLeft 1s ease-in-out;
       }
     }
+
     .skills {
       text-align: left;
       width: 100%;
       animation: fadeInSlideUp 1s ease-in-out;
     }
+
     #why_choose_us_card_container {
       display: flex;
       gap: 20px;
@@ -54,7 +59,7 @@
         align-items: center;
         width: 40%;
         border: 1px solid #f0f0f0;
-        padding: 20px 20px 0px 20px;
+        padding: 20px 20px 0 20px;
         text-align: center;
         animation: fadeInSlideUp 1s ease-in-out;
         transition: transform 0.5s ease-in-out;
@@ -62,6 +67,7 @@
         &:hover {
           transform: scale(1.04);
         }
+
         img {
           width: 50px;
           margin-bottom: 10px;
@@ -79,6 +85,7 @@
     }
   }
 }
+
 @media only screen and (max-width: 768px) {
   #why_choose_us {
     // gap: 60px;
@@ -107,9 +114,10 @@
         align-items: center;
         width: 100%;
         border: 1px solid #f0f0f0;
-        padding: 20px 20px 0px 20px;
+        padding: 20px 20px 0 20px;
         text-align: center;
         margin-top: 20px;
+
         img {
           width: 50px;
         }
