fix rented gear receipt

--- a/src/components/booking/booking_form.scss
+++ b/src/components/booking/booking_form.scss
@@ -196,19 +196,12 @@
     }
   }
 
-  .modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-
-  .modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
+  // .modal-container {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   height: 100%;
+  // }
 }
 
 .modal {
