--- a/src/components/Receipt/Receipt.scss
+++ b/src/components/Receipt/Receipt.scss
@@ -94,28 +94,28 @@ $button-hover-color: #1976d2;
     }
   }
 
-  .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    z-index: 1000;
-    border-radius: 8px;
-    max-width: 90%;
-    max-height: 90%;
-    overflow-y: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
+  // .modal {
+  //   position: fixed;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   background-color: white;
+  //   padding: 20px;
+  //   z-index: 1000;
+  //   border-radius: 8px;
+  //   max-width: 90%;
+  //   max-height: 90%;
+  //   overflow-y: auto;
+  //   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  // }
 
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
+  // .modal-overlay {
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   background-color: rgba(0, 0, 0, 0.5);
+  //   z-index: 999;
+  // }
 }
