fix tables bookings

--- a/src/components/rent/receipt.scss
+++ b/src/components/rent/receipt.scss
@@ -8,6 +8,10 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 
+        .logo {
+      width: 30%;
+    }
+
   .gear-image {
     width: 100%;
   }
