--- a/src/components/booking/bookings.scss
+++ b/src/components/booking/bookings.scss
@@ -1,22 +1,16 @@
 /* General Styling */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
+// body {
+//   background-color: #f9f9f9;
+//   color: #333;
+//   font-size: 16px;
+//   line-height: 1.5;
+//   padding: 20px;
+// }
 
-body {
-  background-color: #f9f9f9;
-  color: #333;
-  font-size: 16px;
-  line-height: 1.5;
-  padding: 20px;
-}
-
-/* Rentals Container */
-.rentals-container {
+/* bookings Container */
+.bookings-container {
   max-width: 90%;
+  margin: auto;
   padding-bottom: 40px;
   background-color: #fff;
   border-radius: 8px;
@@ -35,12 +29,10 @@ h2 {
 }
 
 /* Table Styling */
-table {
+.b_table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
-}
-
+  // margin-top: 20px;
 thead {
   background-color: #007bff;
   color: #fff;
@@ -67,16 +59,19 @@ td {
   color: #555;
   border-bottom: 1px solid #ddd;
 }
+}
+
+
 
 /* Table Scrollbar for Small Screens */
-.rentals-container table {
+.bookings-container table {
   display: block; /* Table becomes block element */
   overflow-x: auto;
   white-space: nowrap; /* Prevent content wrapping */
 }
 
-.rentals-container table th,
-.rentals-container table td {
+.bookings-container table th,
+.bookings-container table td {
   white-space: nowrap; /* Prevent wrapping inside cells */
 }
 
