--- a/src/components/rent/rentals.scss
+++ b/src/components/rent/rentals.scss
@@ -1,18 +1,18 @@
 /* General Styling */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
+// * {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
+//   font-family: Arial, sans-serif;
+// }
 
-body {
-  background-color: #f9f9f9;
-  color: #333;
-  font-size: 16px;
-  line-height: 1.5;
-  padding: 20px;
-}
+// body {
+//   background-color: #f9f9f9;
+//   color: #333;
+//   font-size: 16px;
+//   line-height: 1.5;
+//   padding: 20px;
+// }
 
 /* Rentals Container */
 .rentals-container {
@@ -37,8 +37,9 @@ h2 {
 /* Table Styling */
 table {
   width: 100%;
+  // margin:auto;
   border-collapse: collapse;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
 
 thead {
