--- a/src/components/rent/rentals.scss
+++ b/src/components/rent/rentals.scss
@@ -80,11 +80,41 @@ td {
 .rentals-container table td {
   white-space: nowrap; /* Prevent wrapping inside cells */
 
-  button {
-    // width: 15%;
+  .edit-btn {
+    background-color: rgb(229, 19, 187);
+    flex: 1;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    color: #fff;
+
+    &:hover {
+      background-color: darken(rgb(127, 191, 125), 10%);
+    }
+  }
+
+  .cancel-btn {
     background-color: red;
+    flex: 1;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    color: #fff;
+
+    &:hover {
+      background-color: rgb(94, 6, 6);
+    }
   }
 }
+
 
 /* Status Messages */
 .loading,
