--- a/src/components/booking/bookingEditForm.scss
+++ b/src/components/booking/bookingEditForm.scss
@@ -1,7 +1,7 @@
 /* bookingEditForm.scss */
 .booking-edit-form {
   padding: 20px;
-  background-color: #fff;
+  background-color: #1c0101;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
@@ -16,6 +16,7 @@
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    color: #fffefe;
   }
 
   input {
@@ -23,6 +24,7 @@
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    color: #e6e309;
   }
 
   button {
