--- a/src/components/booking/bookings.scss
+++ b/src/components/booking/bookings.scss
@@ -73,6 +73,41 @@ h2 {
 .bookings-container table th,
 .bookings-container table td {
   white-space: nowrap; /* Prevent wrapping inside cells */
+  .edit-btn {
+    background-color: rgb(229, 19, 187);
+    flex: 1;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    color: #fff;
+    width: 100%;
+
+    &:hover {
+      background-color: darken(rgb(127, 191, 125), 10%);
+    }
+  }
+
+  .cancel-btn {
+    background-color: red;
+    flex: 1;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    color: #fff;
+    width: 100%;
+
+    &:hover {
+      background-color: rgb(94, 6, 6);
+    }
+  }
 }
 
 /* Status Messages */
