--- a/src/components/rent/gearList.scss
+++ b/src/components/rent/gearList.scss
@@ -91,13 +91,13 @@
     }
 
     .rent {
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: center;
-      // align-items: flex-start;
-      // gap: 10px;
-      // background-color: green;
-      // width: 25%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 10px;
+      background-color: b0b8b1;
+      width: 25%;
       color: #fff;
       margin: auto;
       padding: 10px;
