--- a/src/components/rent/rentals.scss
+++ b/src/components/rent/rentals.scss
@@ -163,6 +163,18 @@ td {
   .failed {
     font-size: 1rem;
   }
+  .search-container {
+  margin-bottom: 15px;
+  text-align: right;
+
+  .search-input {
+    padding: 8px;
+    width: 250px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+}
+
 }
 
 @media (max-width: 480px) {
